fix alignement my projects. add content my portolio and about me.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
  footer {
   color: brown;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 60px;
